# LiFCal

./: .gitignore  CMakeLists.txt  README.md
installation/: Dockerfile  README.md
installation/playbooks/: LiFCal_install_COLMAP.yaml  LiFCal_install_CeresSolver_2_1_0.yaml  LiFCal_install_Cuda_12_2_2.yaml  LiFCal_install_Docker.yaml  LiFCal_install_NvidiaContainer.yaml  LiFCal_install_NvidiaDriver_535.yaml  LiFCal_install_OpenCV.yaml
src/: CameraCalibration.cpp  CameraCalibration.h  CameraModel.h  main.cpp
src/BundleAdjustment/: BundleAdjustment.h
src/CalibrationData/: CalibrationData.cpp  CalibrationData.h
src/CalibrationData/ArucoDetection/: ArucoDetection.cpp  ArucoDetection.h
src/CalibrationData/Constraints/: Constraints.cpp  Constraints.h
src/CalibrationData/ExtrinsicOrientation/: ExtrinsicOrientation.cpp  ExtrinsicOrientation.h  ExtrinsicOrientations.cpp  ExtrinsicOrientations.h
src/CalibrationData/ImagePoints/: Image.h  Images.cpp  Images.h
src/CalibrationData/IntrinsicOrientation/: IntrinsicOrientation.cpp  IntrinsicOrientation.h
src/CalibrationData/ObjectPoints/: ObjectPoints.cpp  ObjectPoints.h
src/ColmapReconstructor/: ColmapReconstructor.cpp  ColmapReconstructor.h
src/MicroLensGrid/: EpiPolarLine.cpp  EpiPolarLine.h  MicroLens.cpp  MicroLens.h  MicroLensGrid.cpp  MicroLensGrid.h
src/Utility/: FileManagement.cpp  FileManagement.h  Settings.cpp  Settings.h
src/Utility/myUtility/: myUtility.cpp  myUtility.h
